# CppLox

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  CMakePresets.json  README.md  ________REQS________.md
cmake/: enable_warns_sans.cmake
src/: CMakeLists.txt  compiler.cpp  debugger.cpp  lexer.cpp  logger.cpp  main.cpp  parser.cpp  semantic_check.cpp  type_check.cpp  vm.cpp
src/bytecode/: bytecode.cpp  bytecode.hpp
src/common/: CMakeLists.txt  bytecode.cpp  stack.cpp  util.cpp
src/common/include/: bytecode.hpp  instr.hpp  stack.hpp  tokens.hpp  types.hpp  util.hpp
src/debugger/: debugger.cpp  debugger.hpp
src/include/: ast.hpp  bytecode.hpp  code_segment.hpp  common.hpp  compiler.hpp  debugger.hpp  instr.hpp  lexer.hpp  logger.hpp  parser.hpp  semantic_check.hpp  static_report.hpp  string.hpp  tokens.hpp  type_check.hpp  types.hpp  vm.hpp
src/stack/: stack.cpp  stack.hpp
src/types/: pool.hpp
src/util/: util.cpp  util.hpp
src/vm/: vm.cpp  vm.hpp
tests/: CMakeLists.txt  test_bytecode.cpp  test_common_bytecode.cpp  test_common_util.cpp  test_lexer.cpp  test_util.cpp
